--- a/about-us-original.html
+++ b/about-us-original.html
@@ -61,7 +61,7 @@
                                  Pages
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" href="blog.html">Blog</a>
+                                 <a class="dropdown-item" href="baggage.html">Blog</a>
                                  <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a>
                                  <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a>
                                  <a class="dropdown-item" href="404-error.html">404 Error</a>
@@ -937,7 +937,7 @@
                         <li class="d-block  iq-fw-6 mb-2"><a href="about-us.html" class="text-gray">About</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li>
-                        <li class="d-block  iq-fw-6"><a href="blog.html" class="text-gray">Blog</a></li>
+                        <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
