--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,7 @@
                                  Solutions
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" href="blog.html">Blog</a>
+                                 <a class="dropdown-item" href="baggage.html">Blog</a>
                                  <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a>
                                  <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a>
                                  <a class="dropdown-item" href="404-error.html">404 Error</a>
@@ -115,7 +115,7 @@
                      <img src="images/about/team.jpg" class="img-fluid" alt="#">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="mb-3 iq-fw-8 mt-5 mt-lg-0">10x ROI or more</h2>
+                     <h2 class="mb-3 iq-fw-8 mt-5 mt-lg-0">10x or more ROI</h2>
                      <p class="mb-3 iq-fw-6">We thrive on creating value for our customers. We are a team of Computer Vision, Artificial Intelligence, Machine Learning, Data Analytics, Embedded systems, and Cloud Solutions experts with a passion to help customers achieve atleast 
                         <b>10x</b> ROI by creating faster, cheaper, and efficient solutions. Our goal is to delight our customers. We listen to your needs, and provide a comprehensive solution. 
                      </p>
@@ -162,21 +162,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-                     <div class="team-box">
-                        <img src="images/team/suresh.jpg" class="img-fluid" alt="images">
-                        <div class="team-details text-center">
-                           <h5 class="iq-fw-8">Suresh Devalapalli</h5>
-                           <h6 class="mb-0">CEO </h6>
-                        </div>
-                        <ul class="info-share d-inline">
-                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li> -->
-                           <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
-                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li> -->
-                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-github"></i></a></li> -->
-                        </ul>
-                     </div>
-                  </div>
+                  
                   <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                      <div class="team-box">
                         <img src="images/team/subhash-2.jpg" class="img-fluid" alt="images">
@@ -190,6 +176,21 @@
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-github"></i></a></li> -->
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                     <div class="team-box">
+                        <img src="images/team/suresh.jpg" class="img-fluid" alt="images">
+                        <div class="team-details text-center">
+                           <h5 class="iq-fw-8">Suresh Devalapalli</h5>
+                           <h6 class="mb-0">CEO </h6>
+                        </div>
+                        <ul class="info-share d-inline">
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li> -->
+                           <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li> -->
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-github"></i></a></li> -->
                         </ul>
                      </div>
                   </div>
@@ -244,7 +245,7 @@
                         <li class="d-block  iq-fw-6 mb-2"><a href="about-us.html" class="text-gray">About</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li>
-                        <li class="d-block  iq-fw-6"><a href="blog.html" class="text-gray">Blog</a></li>
+                        <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
