--- a/baggage.html
+++ b/baggage.html
@@ -42,18 +42,18 @@
                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                              <a class="nav-link " href="index.html">Home</a>
+                              <a class="nav-link" href="index.html">Home</a>
                            </li>
                            
                            <li class="nav-item">
-                              <a class="nav-link" href="technology.html">Technology</a>
+                              <a class="nav-link " href="technology.html">Technology</a>
                            </li>
                            <li class="nav-item dropdown">
-                              <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                  Solutions
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" href="baggage.html">Blog</a>
+                                 <a class="dropdown-item active" href="baggage.html">Blog</a>
                                  <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a>
                                  <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a>
                                  <a class="dropdown-item" href="404-error.html">404 Error</a>
@@ -82,6 +82,7 @@
             </div>
          </div>
       </header>
+
       <!--=================================
       Header -->
       <!--=================================
@@ -90,9 +91,9 @@
          <div class="container-fluid">
             <div class="row align-items-center">
                <div class="col-auto mr-auto">
-                     <h2 class="iq-fw-8 text-white mb-0">Solutions</h2>
+                     <h2 class="iq-fw-8 text-white mb-0">Baggage Analytics</h2>
                </div>
-               <div class="col-auto  text-right">
+               <div class="col-auto text-right">
                   <nav aria-label="breadcrumb">
                      <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html" class="iq-fw-6"><i class="ion-android-home"></i>Home</a></li>
@@ -108,78 +109,115 @@
       <!--=================================
       MAIN CONTENT -->
       <div class="main-content">
-         <section>
+         <section class="tech-ptb pb-0">
             <div class="container">
-               <div class="row">
+               <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/03.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/Object-detection.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="iq-fw-8 mb-4 mt-4 mt-lg-0">Any Environment</h2>
-                     <p class="iq-fw-6">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-                     <p class="iq-fw-6 mb-0">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use.</p>
+                     <div class="title-main mb-4">
+                        <div class="tech-no">01</div>
+                        <h2 class="iq-fw-8 d-inline-block">Object Detection & Tracking</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">The core technology that drives all our solutions is detecting, and tracking the objects in a scene, be it be a person, a bike, a car, a suitcase, a backpack etc. By detecting the objects
+                        of interest in a scene, and tracking them, their dwell time, rich insights are derived.</p>
                   </div>
                </div>
             </div>
          </section>
-         <section class="gray-bg">
+         <section class="tech-ptb pb-0">
             <div class="container">
-               <div class="row flex-row-reverse">
+               <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/about/03.png" class="img-fluid" alt="images">
+                     <img src="images/technology/car_counting.PNG" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="iq-fw-8 mb-4 mt-4 mt-lg-0">With any Camera</h2>
-                     <p class="iq-fw-6">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-                     <p class="iq-fw-6">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text. </p>
-                      <p class="iq-fw-6 mb-0">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <div class="title-main mb-4">
+                        <div class="tech-no">02</div>
+                        <h2 class="iq-fw-8 d-inline-block">Vehicle Counting</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Counting vehicles, and their types simplified. Get real-time insights into occupancy of your parking lot, and off-line analytics on when the facility is being used most. Downstream 
+                        applications include publishing your real-time occupancy to parking aggregators, dynamic pricing, and scheduling maintenance when the facility is least used.
+                     </p>
                   </div>
                </div>
             </div>
          </section>
-         <section>
+         <section class="tech-ptb pb-0">
             <div class="container">
-               <div class="row">
+               <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/13.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/license_recognition.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="iq-fw-8 mb-4 mt-4 mt-lg-0">Secure and Suited</h2>
-                     <p class="iq-fw-6">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-                     <p class="iq-fw-6 mb-0">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use.</p>
+                     <div class="title-main mb-4">
+                        <div class="tech-no">03</div>
+                        <h2 class="iq-fw-8 d-inline-block">License Plate Recognition</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Our License Plate Recognition algorithm can detect state, license number, and expiry of the tags with greater accuracy than ever before. With the ability to run on a mobile device, and as a cloud algorithm,
+                        we enable automatic gate openers at the parking garages. No more resident, and visitors decals necessary. Simply register the license number as approved, and we do the rest. In addition, we 
+                        enable smart parking enforcement solutions to monitor wider area faster, search for stolen vehicles, etc.
+                     </p>
                   </div>
                </div>
             </div>
          </section>
-         <section class="gray-bg">
+         <section class="tech-ptb pb-0">
             <div class="container">
-               <div class="row flex-row-reverse">
+               <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/about/04.png" class="img-fluid" alt="images">
+                     <img src="images/technology/baggage_size.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="iq-fw-8 mb-4 mt-4 mt-lg-0">With any Camera</h2>
-                     <p class="iq-fw-6">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-                     <p class="iq-fw-6">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text. </p>
-                      <p class="iq-fw-6 mb-0">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                     <div class="title-main mb-4">
+                        <div class="tech-no">04</div>
+                        <h2 class="iq-fw-8 d-inline-block">Baggage Size, and Type</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Get fast insights into type, and dimensions of a bag. Enhance baggage check in system with additional information about size, color, and type of material for faster 
+                        recognition and retrieval of bags. Reduce time to unload bags when passengers miss the flight, and improve turn-around times of aircrafts. Use the technology at the boarding gates to monitor
+                        aircraft cabin space, and check in bags that no longer fit in the carryon space. Plus, get rich analytics of bags on a route, and how to optimize operations in that route.
+                     </p>
                   </div>
                </div>
             </div>
          </section>
-         <section>
+         <section class="tech-ptb pb-0">
             <div class="container">
-               <div class="row">
+               <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/about/03.jpg" class="img-fluid" alt="images">
+                     <img src="images/technology/driver_license.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
-                     <h2 class="iq-fw-8 mb-4 mt-4 mt-lg-0">Secure and Suited</h2>
-                     <p class="iq-fw-6">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-                     <p class="iq-fw-6  mb-0">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use.</p>
+                     <div class="title-main mb-4">
+                        <div class="tech-no">05</div>
+                        <h2 class="iq-fw-8 d-inline-block">Driver License Recognition</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Instantly recognize and extract the information on a driver license like the state, license number, address, issue date, expiry date etc. 
+                        Enable no-touch ID verification and expedite the checkin process. Quickly enable information exchange by taking a picture of the license, and let us do the rest. Get faster
+                        self-checkout counters by enabling auto verification of age, and credit card information with the driver license. Other forms of identification are in progress, and we will bring 
+                        them to you soon.
+                     </p>
                   </div>
                </div>
             </div>
          </section>
+<!--          <section class="tech-ptb">
+            <div class="container">
+               <div class="row align-items-center flex-row-reverse">
+                  <div class="col-lg-6 text-right">
+                     <img src="images/about/12.jpg" class="img-fluid banner-rounded-circle" alt="images">
+                  </div>
+                  <div class="col-lg-6">
+                     <div class="title-main mb-4">
+                        <div class="tech-no">06</div>
+                        <h2 class="iq-fw-8 d-inline-block">Live detection</h2>
+                     </div>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                  </div>
+               </div>
+            </div>
+         </section> -->
       </div>
       <!--=================================
       MAIN CONTENT -->
@@ -224,13 +262,13 @@
                         <a href="" class="button subscription-button">Sign Up</a>
                      </form>
                      <ul class="list-inline mb-5">
-                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
+                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">+1 360 207 4159</span></li>
                         <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li>
-                        <li class="list-inline-item iq-fw-6"><a href="" class="text-gray"><i class="fab fa-linkedin"></i></li>
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li> -->
+                        <li class="list-inline-item iq-fw-6"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
                      </ul>
                   </div>
                </div>
@@ -243,7 +281,7 @@
                         <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Vizion All rights reserved 2019</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
                </div>
             </div>
             <!-- back-to-top -->
