--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                  Solutions
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" href="blog.html">Blog</a>
+                                 <a class="dropdown-item" href="baggage.html">Blog</a>
                                  <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a>
                                  <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a>
                                  <a class="dropdown-item" href="404-error.html">404 Error</a>
@@ -187,7 +187,7 @@
                      <div class="title-box">
                         <h2 class="title">What's New</h2>
                         <!-- <p class="sub-title">Gaussian Solutions runners up in GSA Eula 2020 AI/ML challenge</p> -->
-                        <h4 class="sub-title">Gaussian Solutions runners up in GSA Eula 2020 AI/ML challenge</h4>
+                        <h4 class="sub-title">Gaussian Solutions runners up in GSA EULA 2020 AI/ML challenge</h4>
                      </div>
                   </div>
                </div>
@@ -451,7 +451,7 @@
                                           <div class="clear-fix"></div>
                                        </div>
                                        <div class="blog-detail">
-                                          <a href="blog.html"><h4>The point of using Lorem Ipsum is that </h4></a>
+                                          <a href="baggage.html"><h4>The point of using Lorem Ipsum is that </h4></a>
                                           <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
                                        </div>
                                     </div>
@@ -470,7 +470,7 @@
                                           <div class="clear-fix"></div>
                                        </div>
                                        <div class="blog-detail">
-                                          <a href="blog.html"><h4>The point of using Lorem Ipsum is that </h4></a>
+                                          <a href="baggage.html"><h4>The point of using Lorem Ipsum is that </h4></a>
                                           <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
                                        </div>
                                     </div>
@@ -499,7 +499,7 @@
                         <li class="d-block  iq-fw-6 mb-2"><a href="about-us.html" class="text-gray">About</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li>
-                        <li class="d-block  iq-fw-6"><a href="blog.html" class="text-gray">Blog</a></li>
+                        <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
